--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <!-- <script src="linq.js"></script>
         <script src="index.js"></script> -->
         <script>
-            require(['global-extensions', 'linq', 'index'], function(_, linq, index){
+            require(['linq-global-extensions', 'linq', 'index'], function(_, linq, index){
                 index.Tests.run();
             })
         </script>
