--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
-       <!-- <script src="linq.js"></script>
-        <script src="index.js"></script> -->
+
         <script>
-            require(['linq-global-extensions', 'linq', 'index'], function(_, linq, index){
+            require(['linq', 'index'], function(linq, index){
                 index.Tests.run();
             })
         </script>
